tests/baselines/reference/stringLiteralsAssertionsInSwitchCase03.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInSwitchCase03.ts(2,10): error TS2352: Type '"bar"' cannot be converted to type '"baz"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInSwitchCase03.ts(2,10): error TS2678: Type '"baz"' is not comparable to type '"foo"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInSwitchCase03.ts(4,11): error TS2352: Type '"bar" | "baz"' cannot be converted to type '"foo"'.
  Type '"baz"' is not comparable to type '"foo"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsAssertionsInSwitchCase03.ts (3 errors) ====
    switch ("foo") {
        case "bar" as "baz":
             ~~~~~~~~~~~~~~
!!! error TS2352: Type '"bar"' cannot be converted to type '"baz"'.
             ~~~~~~~~~~~~~~
!!! error TS2678: Type '"baz"' is not comparable to type '"foo"'.
            break;
        case (("bar" || "baz") as "foo"):
              ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '"bar" | "baz"' cannot be converted to type '"foo"'.
!!! error TS2352:   Type '"baz"' is not comparable to type '"foo"'.
            break;
    }